@@ -113,6 +113,7 @@ static struct option const longopts[] = {
     {"read_firmware_version", no_argument, NULL, 27},
     {"settings_hex", no_argument, NULL, 28},
     {"dump_memory", required_argument, NULL, 29},
+    {"file_num_start", required_argument, NULL, 30},
     {"settings", no_argument, NULL, 'S'},
     { NULL, 0, NULL, 0}
 };
@@ -241,6 +242,7 @@ void usage(char *name) {
   -d, --delay=SECONDS                   delay between the frames (seconds)\n\
       --file_format=FORMAT              valid values: PEF, DNG, JPEG\n\
   -o, --output_file=FILE                send output to FILE\n\
+      --file_num_start=NUMBER           number to start the filename frame counter at\n\
       --debug                           turn on debug messages\n\
       --noshutter                       do not send shutter command, just wait for new photo, download and delete from camera\n\
   -v, --version                         display version information and exit\n\
@@ -382,6 +384,7 @@ int main(int argc, char **argv) {
     uint32_t auto_iso_min = 0;
     uint32_t auto_iso_max = 0;
     int frames = 0;
+    int counter = 0;
     int delay = 0;
     int timeout = 0;
     bool auto_focus = false;
@@ -747,6 +750,17 @@ int main(int argc, char **argv) {
                 }
                 DPRINT("DUMP_MEMORY_SIZE: %u\n",dump_memory_size);
                 break;
+
+            case 30:
+                counter = atoi(optarg);
+                if (counter > 9999) {
+                    pslr_write_log(PSLR_WARNING, "%s: file_num_start is too high.\n", argv[0]);
+                    counter = 0;
+                } else if (counter + frames > 9999) {
+                    pslr_write_log(PSLR_WARNING, "%s: Taking too many frames, file_num_start is too high.\n", argv[0]);
+                    frames = 10000 - counter;
+                }
+                break;
         }
     }
 
@@ -1103,7 +1117,7 @@ int main(int argc, char **argv) {
             int bracket_download = pslr_get_model_bufmask_single(camhandle) ? 1 : (bracket_index+1 < bracket_count ? bracket_index+1 : bracket_count);
             int buffer_index;
             for ( buffer_index = 0; buffer_index < bracket_download; ++buffer_index ) {
-                fd = open_file(output_file, frameNo-bracket_download+buffer_index+1, ufft);
+                fd = open_file(output_file, counter+frameNo-bracket_download+buffer_index+1, ufft);
                 while ( save_buffer(camhandle, buffer_index, fd, &status, uff, quality) ) {
                     usleep(10000);
                 }
